# lsn-pseudo-cdc

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  release-please-config.json  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/rulesets/: main-branch-protection.json  tag-protection.json
.github/scripts/cd/: prepare.sh  pull-image.sh
.github/workflows/: cd.yml  ci.yml  release.yml  reusable-docker.yml  reusable-python-ci.yml
config/: config.local.json
configs/: config.example.json
docs/: 01-architecture.md  02-lsn-windowing.md  03-configuration.md  04-ci-cd-pipelines.md
src/sqlserver_cdc_s3/: __init__.py  cli.py  config.py  connector_runner.py  debezium.py  errors.py  logging_utils.py  lsn.py  models.py  multi_connector_cli.py  pipeline.py  retry.py  s3_io.py  sqlserver.py  state_store.py  transform.py  versioning.py
tests/: test_connector_runner.py  test_lsn.py  test_sqlserver_builds.py  test_transform.py
tests/mssql/: Dockerfile  docker-compose-mssql.yml
