[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlserver-cdc-s3"
version = "0.1.0"
description = "Read SQL Server CDC change tables and persist Debezium-style JSON events to S3."
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "pyodbc>=5.1.0",
]

[project.optional-dependencies]
airflow = [
  "apache-airflow>=3.0.0,<4.0.0",
]

[project.scripts]
sqlserver-cdc-s3 = "sqlserver_cdc_s3.cli:main"
pseudo-cdc-connectors = "sqlserver_cdc_s3.multi_connector_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
